<resources>
    <!-- common -->
    <string name="app_name">NBC_Givehub</string>
    <string name="myPage" translatable="false">My page</string>
    <string name="back">뒤로가기</string>
    <string name="cancel">취소</string>
    <string name="id">아이디</string>
    <string name="name">이름</string>
    <string name="logout" translatable="false">Logout</string>

    <!-- login page -->
    <string name="pw">비밀번호</string>
    <string name="nameHint">이름을 입력해주세요.</string>
    <string name="idHint">아이디를 입력해주세요.</string>
    <string name="pwHint">비밀번호를 입력해주세요.</string>
    <string name="signInBt">로그인</string>
    <string name="signUpBt">회원가입</string>
    <string name="pwPattern">숫자,대문자,특수문자를 포함하여 8 ~ 20자 이내에 입력해 주세요.</string>
    <string name="loginTitle">GiveHub에 오신 것을 환영합니다!</string>
    <string name="idPwCheck">아이디 혹은 비밀번호가 틀렸습니다.</string>

    <!-- signup page -->
    <string name="signUpTitle">계정을 생성해주세요</string>
<<<<<<< HEAD
    <string name="signUpPwCheck">비밀번호를 재입력 해주세요.</string>
    <string name="signUpPwCheckText">비밀번호 재입력</string>
    <string name="already">이미 계정이 있으시다면</string>
    <string name="signupComplete">회원가입 완료</string>


=======
    <string name="singUpBack">로그인</string>
>>>>>>> 43961b6e4829869cb6feae86e4f99d949a4e91ce
    <!-- main page -->
    <string name="logoutMessageTitle">로그아웃 하시겠습니까?</string>
    <string name="logoutMessageContents">다음에 또 멋진 기술 공유로 만나요!</string>
    <string name="logoutComplete">로그아웃 되었습니다.</string>
    <string name="popular">인기글 모아보기</string>
    <string name="home">홈 피드</string>
    <string name="logoutDo">로그아웃</string>

    <!-- my page -->

    <!-- detail page -->
    <string name="viewMore">더 보기 ▼</string>
    <string name="viewLess">내용 접기 ▲</string>

</resources>


