<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/give_hub" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/singUpName"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/text_edit"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/id"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singUpName" />

    <EditText
        android:id="@+id/singUpId"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/text_edit"
        android:ems="10"
        android:hint="@string/idHint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/pw"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singUpId" />

    <EditText
        android:id="@+id/singUpPw"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/text_edit"
        android:ems="10"
        android:hint="@string/pwHint"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/signUpBt"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/sgin_up_bt"
        android:text="@string/signUpBt"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toStartOf="@+id/singUpBack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/singUpBack"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/back"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/signUpBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signUpBt"
        app:layout_constraintTop_toTopOf="@+id/signUpBt"
        android:background="@drawable/sgun_up_back_bt"/>

    <ImageView
        android:id="@+id/singUpNameCheck"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/singUpName"
        app:layout_constraintEnd_toEndOf="@+id/singUpName"
        app:layout_constraintTop_toTopOf="@+id/singUpName"
        android:background="@color/main_background" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/pwPattern"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singUpPw" />

    <ImageView
        android:id="@+id/singUpIdCheck"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/singUpId"
        app:layout_constraintEnd_toEndOf="@+id/singUpId"
        app:layout_constraintTop_toTopOf="@+id/singUpId"
        android:background="@color/main_background" />

    <ImageView
        android:id="@+id/singUpPwCheck"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/singUpPw"
        app:layout_constraintEnd_toEndOf="@+id/singUpPw"
        app:layout_constraintTop_toTopOf="@+id/singUpPw"
        android:background="@color/main_background" />

</androidx.constraintlayout.widget.ConstraintLayout>