<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F9FA">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/give_hub" />

    <TextView
        android:id="@+id/tv_signInToGiveHub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nanumsquareb"
        android:shadowColor="#A5A5A5"
        android:text="@string/loginTitle"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/et_corner"
        android:ems="10"
        android:fontFamily="@font/nanumsquareb"
        android:hint="@string/idHint"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signInToGiveHub" />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:background="@drawable/et_corner"
        android:ems="10"
        android:fontFamily="@font/nanumsquareb"
        android:hint="@string/pwHint"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_id" />

    <android.widget.Button
        android:id="@+id/btn_signIn"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttoncustom"
        android:backgroundTint="@color/main_green"
        android:fontFamily="@font/nanumsquareb"
        android:text="@string/signInBt"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_pw" />

    <android.widget.Button
        android:id="@+id/btn_creatAccount"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttoncustom"
        android:backgroundTint="@color/main_gray"
        android:fontFamily="@font/nanumsquareb"
        android:text="@string/signUpBt"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signIn" />
</androidx.constraintlayout.widget.ConstraintLayout>

    <!--
    1.아이디, et 라인 맞추기
    2. 전체적으로 밑으로 내리기
    -->